--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BarberShop</title>
   </head>
   <body>
-    <h1>Привіт</h1>
+    <header>
+      <nav>
+        <a href="#"> <img src="./imeges/logo.svg" alt="BarberShop logo" /></a>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#"></a>Послуги та ціни</li>
+          <li><a href="#"></a>Майстри</li>
+          <li><a href="#"></a>Контакти</li>
+        </ul>
+      </nav>
+      <a href="tel:+380441111111">+38 044 111 11 11</a>
+      <button>онлайн-запис</button>
+    </header>
+    <main>
+      <section>
+        <ul>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Youtube</a></li>
+        </ul>
+        <p>A hair salon for men in Kyiv</p>
+        <h1>BarberShop</h1>
+        <p>
+          We are experts in trendy men's haircuts. We work quickly, carefully,
+          and tastefully.
+        </p>
+        <ul>
+          <li><button>Назад</button></li>
+          <li><button>Вперед</button></li>
+        </ul>
+      </section>
+      <section>
+        <img src="./imeges/beard.jpeg" alt="Гоління бороди" />
+        <img src="./imeges/hair-cut.jpeg" alt="Гоління" />
+        <h2>Про нас</h2>
+        <p>Найкращий Барбершоп твого міста</p>
+        <p>
+          Якщо ти хочеш додати у свій образ більше впевненості, тобі точно до
+          нас.
+        </p>
+        <p>
+          Ми команда, яка ніколи не зупиняється на досягнутому і прагне змін. І
+          коли ти потрапиш до рук нашого майстра, то вже ніколи не зможеш бути
+          тим самим. Ми команда, яка завжди з клієнтами "на одній хвилі". Тому
+          ми завжди готові вдосконалити кожного, хто до нас приходить!
+        </p>
+        <button>онлайн-запис</button>
+      </section>
+      <section></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
