update index html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#"> <img src="./imeges/logo.svg" alt="BarberShop logo" /></a>
         <ul>
           <li><a href="#">Про нас</a></li>
-          <li><a href="#"></a>Послуги та ціни</li>
+          <li><a href="#"></a>Послуги і ціни</li>
           <li><a href="#"></a>Майстри</li>
           <li><a href="#"></a>Контакти</li>
         </ul>
@@ -26,11 +26,11 @@
           <li><a href="#">Instagram</a></li>
           <li><a href="#">Youtube</a></li>
         </ul>
-        <p>A hair salon for men in Kyiv</p>
+        <p>Чоловіча перукарня в Києві</p>
         <h1>BarberShop</h1>
         <p>
-          We are experts in trendy men's haircuts. We work quickly, carefully,
-          and tastefully.
+          Ми експерти у модних чоловічих стрижках. Працюємо швидко, обережно та
+          зі смаком.
         </p>
         <ul>
           <li><button>Назад</button></li>
