update index html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <button>онлайн-запис</button>
+      <button type="button">онлайн-запис</button>
     </header>
     <main>
       <section>
@@ -33,13 +33,23 @@
           зі смаком.
         </p>
         <ul>
-          <li><button>Назад</button></li>
-          <li><button>Вперед</button></li>
+          <li><button type="button">Назад</button></li>
+          <li><button type="button">Вперед</button></li>
         </ul>
       </section>
       <section>
-        <img src="./imeges/beard.jpeg" alt="Гоління бороди" />
-        <img src="./imeges/hair-cut.jpeg" alt="Гоління" />
+        <img
+          src="./imeges/beard.jpg"
+          alt="Барбер голить бороду"
+          width="270"
+          height="445"
+        />
+        <img
+          src="./imeges/hair-cut.jpg"
+          alt="Барбер робить стрижку бритвою"
+          width="270"
+          height="445"
+        />
         <h2>Про нас</h2>
         <p>Найкращий Барбершоп твого міста</p>
         <p>
@@ -52,8 +62,133 @@
           тим самим. Ми команда, яка завжди з клієнтами "на одній хвилі". Тому
           ми завжди готові вдосконалити кожного, хто до нас приходить!
         </p>
-        <button>онлайн-запис</button>
+        <button type="button">онлайн-запис</button>
       </section>
+      <section>
+        <p>Проведи час у компанії кращих майстрів</p>
+        <h2>Послуги і ціни</h2>
+        <ul>
+          <li>
+            <h3>Чоловіча стрижка</h3>
+            <span>від 300 грн.</span>
+          </li>
+          <li>
+            <h3>Стрижка бороди</h3>
+            <span>від 200 грн.</span>
+          </li>
+          <li>
+            <h3>Стрижка вусів</h3>
+            <span>від 200 грн.</span>
+          </li>
+          <li>
+            <h3>Гоління небезпечною бритвою</h3>
+            <span>від 200 грн.</span>
+          </li>
+          <li>
+            <h3>Cтрижка у стажера</h3>
+            <span>від 50 грн.</span>
+          </li>
+          <li>
+            <h3>Стрижка під насадку</h3>
+            <span>від 200 грн.</span>
+          </li>
+          <li>
+            <h3>Дитяча стрижка (до 12 років)</h3>
+            <span>від 300 грн.</span>
+          </li>
+          <li>
+            <h3>Дитяча стрижка (до 12 років)</h3>
+            <span>від 200 грн.</span>
+          </li>
+        </ul>
+        <button type="button">онлайн-запис</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <p><span>600</span>Задоволених клієнтів на день</p>
+          </li>
+          <li>
+            <p><span>50</span>Нагород за відмінний сервіс</p>
+          </li>
+          <li>
+            <p><span>20</span>Найкращих майстрів міста</p>
+          </li>
+          <li>
+            <p><span>100</span>Подарунок постійним клієнтам</p>
+          </li>
+        </ul>
+        <p>стара традиційна школа</p>
+        <h2>Чому приходять саме до нас?</h2>
+        <p>
+          Про нас говорять лише добре. Але краще 1 раз побачити та відчути, ніж
+          10 разів прочитати.
+        </p>
+      </section>
+      <section>
+        <p>для справжніх поціновувачів атмосфери</p>
+        <h2>Наші майстри</h2>
+        <ul>
+          <li>
+            <img src="./imeges/John Smith.jpg" alt="John Smith" />
+            <h3>John Smith</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="" alt="instagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./imeges/Michele Doe.jpg" alt="Michele Doe" />
+            <h3>Michele Doe</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="" alt="instagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./imeges/Alan Black .jpg" alt="Alan Black" />
+            <h3>Alan Black</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="" alt="instagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="" alt="linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section></section>
       <section></section>
     </main>
     <footer></footer>
